# type-safe-avl-examples

./: .gitignore  1-types.hs  2-lookup-not-found.hs  3-non-bst.hs  4-unbalanced.hs  5-non-bst-unbalanced.hs  Makefile  README.md  type-safe-avl-examples.cabal
